{
    "version": 1,
    "name": "Keybinds",
    "maps": [
        {
            "name": "Shortcuts",
            "id": "abeb0586-5100-4b72-8aa8-28a4c4aee7b3",
            "actions": [
                {
                    "name": "OpenMissions",
                    "type": "Button",
                    "id": "95a07cf7-763a-427b-a91b-23539c3466dc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenDiplomacy",
                    "type": "Button",
                    "id": "13d15590-6a1b-4060-83fa-8d74b995e8be",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenResearch",
                    "type": "Button",
                    "id": "7e36b7d7-8e5b-4a85-94d2-18d11f5bf6d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenStorage",
                    "type": "Button",
                    "id": "2f2a7772-6fff-4c38-9013-5a4440965e68",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenAstrarium",
                    "type": "Button",
                    "id": "e024c251-51eb-4f99-bd86-edf5afb640ff",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenConstellations",
                    "type": "Button",
                    "id": "43c992e0-58e9-449a-8d4d-7c82d681ec6b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenConstruction",
                    "type": "Button",
                    "id": "0af9e147-67cf-4cd8-965f-8997b528cb21",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TimePause",
                    "type": "Button",
                    "id": "a875d97a-6111-497d-ac08-1458bbf60520",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TimeSpeed1",
                    "type": "Button",
                    "id": "37ae91f1-4068-441f-9391-89cb0e5d7106",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TimeSpeed2",
                    "type": "Button",
                    "id": "ee50ae8a-c4fa-4522-bf8e-69902ece1682",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TimeSpeed3",
                    "type": "Button",
                    "id": "c601c5ad-a6c6-48b4-821d-ba620cf4e49a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddResource",
                    "type": "Button",
                    "id": "4736b405-d8c0-4ef3-b743-decc7a285110",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UnlockAll",
                    "type": "Button",
                    "id": "513f5273-697b-49f7-870e-a590da9adbda",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b160b905-00d2-445e-b2f1-ace9a518df6e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMissions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b51961cd-2340-492b-bf9e-de4c5c3837cb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenDiplomacy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "940a6987-deb6-45ca-aabc-fa95baf058ce",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenResearch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d56bf184-4aa9-46d6-b3f9-f99ace19b05d",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenStorage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c35e48f-82c4-42d7-b345-9c5ca50cb742",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenAstrarium",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a6ba4ec-8eb9-4343-9eff-5b3db99fde81",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenConstellations",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa0a41e3-99cb-4d0e-9b10-d1490a7d38b2",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenConstruction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7b847fe-a9c8-43ca-b1ee-37cb7220a1a7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimePause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f8b1e38-ce54-4cfe-b7c3-4241340f1b5f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimeSpeed1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa36a4c7-1c28-42c7-a04c-9e68679f58a4",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimeSpeed2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "854ed56b-4c4a-47c5-ac3e-f93e22bcd906",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TimeSpeed3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00e7deb1-18cc-4853-b4ab-2d0705f05970",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddResource",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84c7d3ab-d49a-4abb-800c-cf512ad25820",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnlockAll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}